// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommunityLikeComponent should display as liked if LikedByCurrentUser === true  1`] = `
<pf-community-like
  LikedByCurrentUser={[Function Boolean]}
  store={[Function Store]}
>
  <button
    class="btn m-1 p-0 community-btn-clicked"
    id="like-reply"
    ng-reflect-klass="btn m-1 p-0"
    ng-reflect-ng-class="community-btn-clicked"
    type="button"
  >
    <i
      class="fa-heart icon fas"
      ng-reflect-klass="fa-heart icon"
      ng-reflect-ng-class="fas"
    />
    <span>
        Like
    </span>
  </button>
</pf-community-like>
`;

exports[`CommunityLikeComponent should display as liked if LikedByCurrentUser === true 1`] = `
<pf-community-like
  LikedByCurrentUser={[Function Boolean]}
  store={[Function Store]}
>
  <button
    class="btn m-1 p-0 community-btn-clicked"
    id="like-reply"
    ng-reflect-klass="btn m-1 p-0"
    ng-reflect-ng-class="community-btn-clicked"
    type="button"
  >
    <i
      class="fa-heart icon fas"
      ng-reflect-klass="fa-heart icon"
      ng-reflect-ng-class="fas"
    />
    <span>
        Like
    </span>
  </button>
</pf-community-like>
`;

exports[`CommunityLikeComponent should display as not liked if LikedByCurrentUser === false 1`] = `
<pf-community-like
  LikedByCurrentUser="false"
  store={[Function Store]}
>
  <button
    class="btn m-1 p-0 community-btn"
    id="like-reply"
    ng-reflect-klass="btn m-1 p-0"
    ng-reflect-ng-class="community-btn"
    type="button"
  >
    <i
      class="fa-heart icon far"
      ng-reflect-klass="fa-heart icon"
      ng-reflect-ng-class="far"
    />
    <span>
        Like
    </span>
  </button>
</pf-community-like>
`;

exports[`CommunityLikeComponent should show like component 1`] = `
<pf-community-like
  store={[Function Store]}
>
  <button
    class="btn m-1 p-0 community-btn"
    id="like-reply"
    ng-reflect-klass="btn m-1 p-0"
    ng-reflect-ng-class="community-btn"
    type="button"
  >
    <i
      class="fa-heart icon far"
      ng-reflect-klass="fa-heart icon"
      ng-reflect-ng-class="far"
    />
    <span>
        Like
    </span>
  </button>
</pf-community-like>
`;
